test/libyul/yulSyntaxTests/datacopy_shadowing.yul
{
    function datacopy(a, b, c) {}
    function datasize(a) -> b {}
    function dataoffset(a) -> b {}
}
// ----
// ParserError 5568: (15-23): Cannot use reserved name "datacopy" as identifier name.
